--- a/checkout/index.html
+++ b/checkout/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>MaxPlayer</title>
+    <title>MAXplayer</title>
 </head>
 <body>
-<a>МААААААААКС</a>
+
 </body>
 </html>
