css and html vsyo

--- a/checkout/index.html
+++ b/checkout/index.html
@@ -6,6 +6,78 @@
     <title>MAXplayer</title>
 </head>
 <body>
-
+<div class="container">
+    <div class="player-header">
+        <h1>MAXplayer</h1>
+        <p>Бета-версия музыкального плеера</p>
+    </div>
+    <div class="player">
+        <div class="albumCover">
+            ♫
+        </div>
+        <div class="song-info">
+            <h3 class="song-title" id="songTitle">Devil Town</h3>
+            <p class="artist" id="songArtist">Cavetown</p>
+        </div>
+        <div class="progress-container" id="progressContainer"></div>
+        <div class="controls">
+        <button class="control-btn" id="shuffleBtn"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M12.1367 7.49442C13.5129 6.32173 14.5 5.5 18 5.5V6.5C15 6.5 14.0496 7.17827 12.7852 8.25558C11.5114 9.34097 10.3703 10.798 9.20851 12.3053C9.16178 12.3659 9.11502 12.4266 9.0682 12.4873C7.96595 13.9182 6.83786 15.3826 5.59114 16.4977C4.28305 17.6677 2.79404 18.5 1 18.5V17.5C2.45596 17.5 3.71695 16.8323 4.92448 15.7523C6.1003 14.7007 7.1775 13.3027 8.30122 11.8443C8.33959 11.7945 8.37801 11.7447 8.4165 11.6947C9.56717 10.202 10.7699 8.65903 12.1367 7.49442Z" fill="white"/>
+<path d="M22 6L17.5 8.59808L17.5 3.40192L22 6Z" fill="white"/>
+<path d="M22 18L17.5 20.5981L17.5 15.4019L22 18Z" fill="white"/>
+<path d="M18 18.5C14.5 18.5 13.5129 17.6783 12.1367 16.5056C11.472 15.9392 10.8461 15.2833 10.2461 14.5873L11.0199 13.9533C11.5889 14.6126 12.1717 15.2216 12.7852 15.7444C14.0496 16.8217 14.5 17.5 18 17.5V18.5Z" fill="white"/>
+<path d="M7.22575 9.20269C6.69957 8.58773 6.1576 8.00896 5.59114 7.50232C4.28305 6.33235 2.79404 5.5 1 5.5V6.5C2.45596 6.5 3.71695 7.16765 4.92448 8.24768C5.44903 8.71684 5.95394 9.25492 6.45212 9.83653L7.22575 9.20269Z" fill="white"/>
+</svg></button>
+        <button class="control-btn" id="prevBtn"><svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M1 0C0.447693 0 0 0.447754 0 1V23C0 23.5522 0.447693 24 1 24H3C3.55231 24 4 23.5522 4 23V13.1428L21.5038 23.145C22.1705 23.5261 23 23.0447 23 22.2769V1.72314C23 0.955322 22.1705 0.473877 21.5038 0.85498L4 10.8572V1C4 0.447754 3.55231 0 3 0H1Z" fill="white"/>
+</svg></button>
+        <button class="control-btn" id="playBtn"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+<circle cx="16" cy="16" r="16" fill="white"/>
+<path d="M12 22V10L22 16L12 22Z" fill="black"/>
+</svg></button>
+        <button class="control-btn" id="nextBtn"><svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M22 0C22.5523 0 23 0.447754 23 1V23C23 23.5522 22.5523 24 22 24H20C19.4477 24 19 23.5522 19 23V13.1428L1.49615 23.145C0.829468 23.5261 0 23.0447 0 22.2769V1.72314C0 0.955322 0.829468 0.473877 1.49615 0.85498L19 10.8572V1C19 0.447754 19.4477 0 20 0H22Z" fill="white"/>
+</svg></button>
+        <button class="control-btn" id="repeatBtn"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M20 5.5L15.5 8.09814V6H7.5C4.18628 6 1.5 8.68628 1.5 12C1.5 13.167 1.83264 14.2546 2.40808 15.1753L1.56018 15.7053C0.888184 14.6304 0.5 13.3599 0.5 12C0.5 8.13403 3.63403 5 7.5 5H15.5V2.90186L20 5.5Z" fill="white"/>
+<path d="M22.5 12C22.5 10.9456 22.2284 9.95605 21.7518 9.09619L22.6265 8.61133C23.1832 9.61597 23.5 10.7717 23.5 12C23.5 15.866 20.366 19 16.5 19H7.5V21.0981L3 18.5L7.5 15.9019V18H16.5C19.8137 18 22.5 15.3137 22.5 12Z" fill="white"/>
+</svg></button>
+    </div>
+    <div class="volume-control">
+        <span><svg width="20" height="20" viewBox="0 0 20 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M6.44658 12.0879H4.84445C3.8488 12.0879 3.35097 12.0879 2.97068 12.3027C2.63618 12.4917 2.36421 12.7931 2.19376 13.1639C2 13.5855 2 14.1374 2 15.241V20.7589C2 21.8627 2 22.4145 2.19376 22.836C2.36421 23.2069 2.63618 23.5084 2.97068 23.6972C3.35097 23.912 3.8488 23.912 4.84445 23.912H6.44658C7.42596 23.912 7.91573 23.912 8.3696 24.0474C8.77156 24.1674 9.15164 24.3647 9.49209 24.6303C9.87644 24.93 10.1899 25.347 10.8169 26.181L15.4852 32.3909C16.2597 33.4214 16.6471 33.9365 16.9852 33.9901C17.2782 34.0364 17.5728 33.9184 17.771 33.6748C18 33.3934 18 32.7229 18 31.3817V4.6183C18 3.27713 18 2.60654 17.771 2.32528C17.5728 2.08172 17.2782 1.9635 16.9852 2.00993C16.6469 2.06354 16.2597 2.57869 15.4852 3.60901L10.8169 9.81885C10.1899 10.6529 9.87644 11.0699 9.49209 11.3698C9.15164 11.6354 8.77156 11.8327 8.3696 11.9526C7.91573 12.0879 7.42596 12.0879 6.44658 12.0879Z" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></span>
+        <input type="range" class="volume-slider" id="volumeSlider" min="0" max="100" value="80">
+        <span><svg width="20" height="20" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M25.1118 12.0879C26.2277 13.7348 26.8889 15.7818 26.8889 18C26.8889 20.2183 26.2277 22.2652 25.1118 23.9121M28.6667 4.77999C31.9399 8.02762 34 12.7471 34 18C34 23.2529 31.9399 27.9723 28.6667 31.22M4.84444 12.0879H6.44658C7.42601 12.0879 7.91572 12.0879 8.36951 11.9526C8.77161 11.8327 9.15156 11.6354 9.49207 11.3698C9.87639 11.07 10.1899 10.6529 10.8169 9.81888L15.4852 3.60903C16.2597 2.57871 16.6469 2.06355 16.9852 2.00993C17.2782 1.9635 17.5728 2.08174 17.771 2.3253C18 2.60656 18 3.27715 18 4.61832V31.3816C18 32.7229 18 33.3935 17.771 33.6747C17.5728 33.9183 17.2782 34.0366 16.9852 33.99C16.6471 33.9364 16.2597 33.4213 15.4852 32.391L10.8169 26.1812C10.1899 25.3472 9.87639 24.93 9.49207 24.6302C9.15156 24.3646 8.77161 24.1673 8.36951 24.0475C7.91572 23.9121 7.42601 23.9121 6.44658 23.9121H4.84444C3.8488 23.9121 3.35097 23.9121 2.97068 23.6973C2.63618 23.5083 2.36421 23.2068 2.19376 22.8361C2 22.4146 2 21.8626 2 20.759V15.2411C2 14.1373 2 13.5855 2.19376 13.1639C2.36421 12.7931 2.63618 12.4917 2.97068 12.3027C3.35097 12.088 3.8488 12.0879 4.84444 12.0879Z" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+</svg></span>
+    </div>
+    <div class="playlist">
+        <div class="playlist-item">
+            <div class="playlist-item-icon">▶</div>
+            <div>
+                <div>овердоз</div>
+                <div>темный принц</div>
+            </div>
+            <div>1.29</div>
+        </div>
+        <div class="playlist-item">
+            <div class="playlist-item-icon">▶</div>
+            <div>
+                <div>овердоз</div>
+                <div>темный принц</div>
+            </div>
+            <div>1.29</div>
+        </div>
+        <div class="playlist-item">
+            <div class="playlist-item-icon">▶</div>
+            <div>
+                <div>овердоз</div>
+                <div>темный принц</div>
+            </div>
+            <div>1.29</div>
+        </div>
+    </div>
+    </div>
+</div>
 </body>
-</html>
