--- a/checkout/index.html
+++ b/checkout/index.html
@@ -31,7 +31,7 @@
         <button class="control-btn" id="prevBtn"><svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M1 0C0.447693 0 0 0.447754 0 1V23C0 23.5522 0.447693 24 1 24H3C3.55231 24 4 23.5522 4 23V13.1428L21.5038 23.145C22.1705 23.5261 23 23.0447 23 22.2769V1.72314C23 0.955322 22.1705 0.473877 21.5038 0.85498L4 10.8572V1C4 0.447754 3.55231 0 3 0H1Z" fill="white"/>
 </svg></button>
-        <button class="control-btn" id="playBtn"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <button class="control-btn" id="playBtn"><svg width="40" height="40" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 <circle cx="16" cy="16" r="16" fill="white"/>
 <path d="M12 22V10L22 16L12 22Z" fill="black"/>
 </svg></button>
@@ -55,27 +55,27 @@
     <div class="playlist">
         <div class="playlist-item">
             <div class="playlist-item-icon">▶</div>
-            <div>
-                <div>овердоз</div>
-                <div>темный принц</div>
+            <div class = "song-info">
+                <p class = "music-name">овердоз</p>
+                <p class = "music-artist">темный принц</p>
             </div>
-            <div>1.29</div>
+            <div class="music-time"><p> 1:29</p></div>
         </div>
         <div class="playlist-item">
             <div class="playlist-item-icon">▶</div>
-            <div>
-                <div>овердоз</div>
-                <div>темный принц</div>
+            <div class = "song-info">
+                <p class = "music-name">овердоз</p>
+                <p class = "music-artist">темный принц</p>
             </div>
-            <div>1.29</div>
+            <div class="music-time"><p> 1:29</p></div>
         </div>
         <div class="playlist-item">
             <div class="playlist-item-icon">▶</div>
-            <div>
-                <div>овердоз</div>
-                <div>темный принц</div>
+            <div class = "song-info">
+                <p class = "music-name">овердоз</p>
+                <p class = "music-artist">темный принц</p>
             </div>
-            <div>1.29</div>
+            <p class="music-time">1:29</p>
         </div>
     </div>
     </div>
