structure changes, playlist animation

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
 <div class="container">
     <div class="player-header">
-        <h1>MAXplayer</h1>
-        <p>Бета-версия музыкального плеера</p>
+        <h1>max.player</h1>
+        <!-- <p>Бета-версия музыкального плеера</p> -->
     </div>
     <div class="player">
         <div class="albumCover">
             ♫
         </div>
         <div class="song-info">
-            <h3 class="song-title" id="songTitle">Devil Town</h3>
-            <p class="artist" id="songArtist">Cavetown</p>
+            <h3 class="song-title" id="songTitle">Untitled</h3>
+            <p class="artist" id="songArtist">Максим Рогачёв</p>
         </div>
         <div class="progress-container" id="progressContainer"></div>
         <div class="controls">
@@ -53,30 +53,30 @@
 </svg></span>
     </div>
     <div class="playlist">
-        <div class="playlist-item">
+        <button class="playlist-item">
             <div class="playlist-item-icon">▶</div>
             <div class = "song-info">
                 <p class = "music-name">овердоз</p>
                 <p class = "music-artist">темный принц</p>
             </div>
             <div class="music-time"><p> 1:29</p></div>
-        </div>
-        <div class="playlist-item">
+        </button>
+        <button class="playlist-item">
             <div class="playlist-item-icon">▶</div>
             <div class = "song-info">
                 <p class = "music-name">овердоз</p>
                 <p class = "music-artist">темный принц</p>
             </div>
             <div class="music-time"><p> 1:29</p></div>
-        </div>
-        <div class="playlist-item">
+        </button>
+        <button class="playlist-item">
             <div class="playlist-item-icon">▶</div>
             <div class = "song-info">
                 <p class = "music-name">овердоз</p>
                 <p class = "music-artist">темный принц</p>
             </div>
             <p class="music-time">1:29</p>
-        </div>
+        </button>
     </div>
     </div>
 </div>
