бест апдеит евер

--- a/index.html
+++ b/index.html
@@ -80,4 +80,8 @@
     </div>
     </div>
 </div>
+
+<a class="promo-banner" href="https://t.me/LuminoVPNBot" target="_blank" rel="noopener noreferrer" aria-label="Lumino VPN - лучший путь на пути к свободе (открывается в Telegram)">
+    Lumino VPN - лучший путь на пути  к свободе
+</a>
 </body>
