--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="albumCover">
             ♫
         </div>
+        <button class = "addButton">+</button>
         <div class="song-info">
             <h3 class="song-title" id="songTitle">Untitled</h3>
             <p class="artist" id="songArtist">Максим Рогачёв</p>
@@ -53,7 +54,7 @@
 </svg></span>
     </div>
     <div class="playlist">
-        <button class="playlist-item">
+        <!-- <button class="playlist-item">
             <div class="playlist-item-icon">▶</div>
             <div class = "song-info">
                 <p class = "music-name">овердоз</p>
@@ -76,7 +77,7 @@
                 <p class = "music-artist">темный принц</p>
             </div>
             <p class="music-time">1:29</p>
-        </button>
+        </button> -->
     </div>
     </div>
 </div>
