--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <div class="container">
     <div class="player-header">
         <h1>max.player</h1>
-        <!-- <p>Бета-версия музыкального плеера</p> -->
     </div>
     <div class="player">
         <div class="albumCover">
@@ -18,7 +17,7 @@
         <button class = "addButton">+</button>
         <div class="song-info">
             <h3 class="song-title" id="songTitle">Untitled</h3>
-            <p class="artist" id="songArtist">Максим Рогачёв</p>
+            <p class="artist" id="songArtist">check</p>
         </div>
         <div class="progress-container" id="progressContainer"></div>
         <div class="controls">
@@ -82,3 +81,5 @@
     </div>
 </div>
 </body>
+<script src="./renderer.js"></script>
+</html>
